// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secondary Menu Mobile should render the snapshot when dropdown is expanded 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="css-at0nlu"
      >
        <div
          class="css-b1ujo"
        >
          <p
            class="css-14vx0gz"
          >
            Home
          </p>
        </div>
        <li
          class="nk-menu-item css-bkfzpe"
        >
          <button
            aria-expanded="false"
            class="css-15pgly0"
            data-testid="menu-sub-button"
            type="button"
          >
            <span
              class="css-1jsivz"
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="css-1tvoidw-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-n5iuvv"
          />
        </li>
      </div>
      <div
        class="css-kbdtrd"
      >
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/home"
              id="vertical-home"
            >
              <span
                class="css-1t9x538"
              >
                Home
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/news"
              id="vertical-news"
            >
              <span
                class="css-1t9x538"
              >
                News
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/comment"
              id="vertical-comment"
            >
              <span
                class="css-1t9x538"
              >
                Comment
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/life-and-style"
              id="vertical-life-and-style"
            >
              <span
                class="css-1t9x538"
              >
                Life & Style
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/arts-and-books"
              id="vertical-arts-and-books"
            >
              <span
                class="css-1t9x538"
              >
                Arts & Books
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/sport"
              id="vertical-sport"
            >
              <span
                class="css-1t9x538"
              >
                Sport
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/business-and-money"
              id="vertical-business-and-money"
            >
              <span
                class="css-1t9x538"
              >
                Business & Money
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/puzzles"
              id="vertical-puzzles"
            >
              <span
                class="css-1t9x538"
              >
                Puzzles
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
        <div
          class="css-ku499h"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-16h3dur"
              data-testid="buttonLink"
              href="/magazines"
              id="vertical-magazines"
            >
              <span
                class="css-1t9x538"
              >
                Magazines
              </span>
            </a>
          </li>
          <hr
            class="css-1nallzn"
          />
        </div>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Secondary Menu Mobile should render the snapshot when dropdown is not expanded 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="css-at0nlu"
      >
        <div
          class="css-b1ujo"
        >
          <p
            class="css-14vx0gz"
          >
            Home
          </p>
        </div>
        <li
          class="nk-menu-item css-bkfzpe"
        >
          <button
            aria-expanded="false"
            class="css-15pgly0"
            data-testid="menu-sub-button"
            type="button"
          >
            <span
              class="css-1jsivz"
            >
              See all
            </span>
            <svg
              aria-hidden="true"
              class="css-1tvoidw-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-n5iuvv"
          />
        </li>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;
